[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Opponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Hud.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44.5, 450 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 239, 47.625 )

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.12549, 0.172549, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 660 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 240, 360 )

[node name="Opponent" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 60 )

[node name="WorldBounds" type="Node" parent="."]

[node name="leftbound" type="StaticBody2D" parent="WorldBounds"]
position = Vector2( -60, 180 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds/leftbound"]
position = Vector2( 15, 180 )
shape = SubResource( 1 )

[node name="rightbound" type="StaticBody2D" parent="WorldBounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds/rightbound"]
position = Vector2( 525.5, 360 )
shape = SubResource( 1 )

[node name="top" type="StaticBody2D" parent="WorldBounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds/top"]
position = Vector2( 239, -48 )
shape = SubResource( 2 )

[node name="bottom" type="StaticBody2D" parent="WorldBounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds/bottom"]
position = Vector2( 240, 767 )
shape = SubResource( 2 )

[node name="Hud" parent="." instance=ExtResource( 5 )]

[node name="ShowHintTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="opponent_scored" from="Ball" to="." method="_on_Ball_opponent_scored"]
[connection signal="player_scored" from="Ball" to="." method="_on_Ball_player_scored"]
[connection signal="timeout" from="ShowHintTimer" to="." method="_on_ShowHintTimer_timeout"]
